# docs_agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/docs_agent/: __init__.py  __main__.py  add_element.py  agent.py  cli.py  config.py  setup.py  update.py
src/docs_agent/helpers/: chromadb.py  elements.py  filesize.py  log.py
test/: conftest.py  helpers.py  test_add_element.py  test_agent.py  test_config.py  test_setup.py  test_update.py
test/helpers/: test_chromadb.py  test_elements.py  test_filesize.py
